2016-04-17  Andy Buckley  <andy.buckley@cern.ch>

	* Add null GenVertex protection in Particle children & descendants methods.

2016-04-15  Andy Buckley  <andy.buckley@cern.ch>

	* Add ATLAS_2015_I1397637, ATLAS 8 TeV boosted top cross-section vs. pT

2016-04-14  Andy Buckley  <andy.buckley@cern.ch>

	* Add a --no-histos argument to the rivet script.

2016-04-13  Andy Buckley  <andy.buckley@cern.ch>

	* Add ATLAS_2015_I1351916 (8 TeV Z FB asymmetry) and
	ATLAS_2015_I1408516 (8 TeV Z phi* and pT) analyses, and their _EL,
	_MU variants.

2016-04-12  Andy Buckley  <andy.buckley@cern.ch>

	* Patch PID utils for ordering issues in baryon decoding.

2016-04-11  Andy Buckley  <andy.buckley@cern.ch>

	* Actually implement ZEUS_2001_S4815815... only 10 years late!

2016-04-08  Andy Buckley  <andy.buckley@cern.ch>

	* Add a --guess-prefix flag to rivet-config, cf. fastjet-config.

	* Add RIVET_DATA_PATH variable and related functions in C++ and
	Python as a common first-fallback for RIVET_REF_PATH,
	RIVET_INFO_PATH, and RIVET_PLOT_PATH.

	* Add --pwd options to rivet-mkhtml and rivet-cmphistos

2016-04-07  Andy Buckley  <andy.buckley@cern.ch>

	* Remove implicit conventional event rotation for HERA -- this
	needs to be done explicitly from now.

	* Add comBoost functions and methods to Beam.hh, and tidy
	LorentzTransformation.

	* Restructure Beam projection functions for beam particle and
	sqrtS extraction, and add asqrtS functions.

	* Rename and improve PID and Particle Z,A,lambda functions ->
	nuclZ,nuclA,nuclNlambda.

2016-04-05  Andy Buckley  <andy.buckley@cern.ch>

	* Improve binIndex function, with an optional argument to allow
	overflow lookup, and add it to testMath.

	* Adding setPE, setPM, setPtEtaPhiM, etc. methods and
	corresponding mk* static methods to FourMomentum, as well as
	adding more convenience aliases and vector attributes for
	completeness. Coordinate conversion functions taken from
	HEPUtils::P4. New attrs also mapped to ParticleBase.
